# petitmates

./: Cargo.toml  Makefile  README.ja.md  README.md  build.rs  dmg_settings.py  entitlements.plist
.github/workflows/: build-windows.yml
assets/bearded_dragon/: behavior.toml  config.toml  manifest.toml  speech.toml
assets/common/: behavior.toml  speech.toml
assets/pond_turtle/: behavior.toml  config.toml  manifest.toml  speech.toml
src/: anim_trigger.rs  assets.rs  behavior.rs  config.rs  debug_menu.rs  demo_behavior.rs  engine.rs  macos.rs  main.rs  manifest.rs  rust_behavior.rs  speech.rs  sprite_map.rs  user_config.rs  weather.rs  windows.rs  windows_assets.rs  windows_wm.rs  wm.rs
