[package]
name = "petitmates"
version = "0.3.1"
edition = "2024"

[features]
# Enable the wm_inspect_win diagnostic binary (Windows cross-compile only).
# Not included in default builds to avoid macOS compilation errors.
inspect-win = []

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
rand = { version = "0.9", features = ["small_rng"] }
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
ureq = { version = "3", features = ["json"] }
serde_json = "1"

[target.'cfg(target_os = "macos")'.dependencies]
block2 = "0.6.2"
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = [
    "NSAnimationContext",
    "NSApplication",
    "NSBezierPath",
    "NSButton",
    "NSColor",
    "NSEvent",
    "NSFont",
    "NSImage",
    "NSImageView",
    "NSMenu",
    "NSMenuItem",
    "NSPanel",
    "NSParagraphStyle",
    "NSRunningApplication",
    "NSScreen",
    "NSStatusBar",
    "NSStatusItem",
    "NSView",
    "NSWindow",
    "NSWorkspace",
] }
objc2-foundation = { version = "0.3.2", features = [
    "NSArray",
    "NSAttributedString",
    "NSBundle",
    "NSDictionary",
    "NSFileManager",
    "NSLocale",
    "NSRunLoop",
    "NSString",
    "NSTimer",
    "NSURL",
] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
image = "0.25"

[[bin]]
name = "petitmates"
path = "src/main.rs"

[[bin]]
name = "wm_inspect"
path = "src/bin/wm_inspect.rs"

[[bin]]
name = "wm_inspect_win"
path = "src/bin/wm_inspect_win.rs"
required-features = ["inspect-win"]
